# evm-dafny

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  Architecture.md  CONTRIBUTING.md  CONTRIBUTORS.md  GNUmakefile  LEGAL.md  README.md  SEMANTICS.md  VERIFICATION.md  build.gradle  build.sh  compare-distribution.py  dafnymeasure.py  find-extremes.py  log_readers.py  plot-distribution.py  pyproject.toml  verifyAll.sh  verifyAllRec.sh
.github/: CODEOWNERS
.github/workflows/: build.yml
src/dafny/: NativeTypes.dfy  NonNativeTypes.dfy  bytecode.dfy  disassembler.dfy  evm-abstract.dfy  evm-berlin.dfy  evm-inst.dfy  evm-opcodes.dfy  evm-types.dfy  evm.dfy  evmstate.dfy  gas.dfy  mini-evm-examples.dfy  mini-evm-with-gas-examples.dfy  mini-evm-with-gas.dfy  mini-evm.dfy  opcodes.dfy  proofGen.dfy  refinement.dfy  simple-evm.dfy  state.dfy  t8n.dfy  test.dfy
src/dafny/concrete-refinement/: evm-execution-examples.dfy  mini-evm-examples.dfy
src/dafny/core/: code.dfy  context.dfy  fork.dfy  memory.dfy  precompiled.dfy  stack.dfy  storage.dfy  substate.dfy  transient.dfy  worldstate.dfy
src/dafny/crypto/: alt_bn128.dfy
src/dafny/evms/: EVMOpcodes.dfy  berlin.dfy  mini-evm-with-gas.dfy  mini-evm.dfy
src/dafny/refinement/: evm-seq.dfy  evm.dfy  evmir-refinement-general.dfy  evmir-refinement.dfy  evmir-semantics.dfy  evmir-tests.dfy  evmir-types.dfy  evmir.dfy  refinement.dfy  test.dfy  test2.dfy
src/dafny/tests/: mini-evm-examples.dfy  (+1 more)
src/java/: Main.java
src/util/: int.dfy  stack.dfy  storage.dfy
tests/: excludes.txt  includes.txt
(+3042 files in other folders)
