[tool.poetry]
package-mode = false
name = "evm-dafny"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quantiphy = "^2.19"
hvplot = "^0.9.2"
plotly = "^5.20.0"
pyinstrument = "^4.6.2"
scipy = "^1.13.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
